fix: close icon align

--- a/packages/theme-chalk/src/drawer.scss
+++ b/packages/theme-chalk/src/drawer.scss
@@ -59,6 +59,7 @@ $directions: rtl, ltr, ttb, btt;
     }
     .#{$namespace}-icon {
       font-size: inherit;
+      vertical-align: text-bottom;
     }
   }
 
